# healthcare-rag-platform

./: .env.example  CONTRIBUTING.md  Dockerfile  Dockerfile.demo  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
demo/: __init__.py  run_queries.py  seed_data.py  server.py
docs/operations/: AUDIT-TRACEABILITY.md  METRICS-IMPACT.md  PLAYBOOK-REGULATED-AI.md  POSTMORTEM-RAG-2025-001.md  PROMPT-LINEAGE.md  VALIDATION-GATES.md
examples/: quickstart.py
src/: __init__.py
src/governance/: __init__.py  audit_logger.py  cost_guard.py  guardrails.py  phi_detector.py
src/rag/: __init__.py  embeddings.py  evaluation.py  reranker.py  retriever.py
tests/unit/: test_cost_guard.py
